src/test/resources/public/input/typechecking/fail/double_decl/fail13.jova
class Test{
  Test (int y){
  }

  Test (int y){
  }

  Test (string y){
  }

  Test (int x, string y){
  }

  Test (string y, int x){
  }
}